--- a/trunk/LanFinder.csproj
+++ b/trunk/LanFinder.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Lib\NetworkBrowser.cs" />
     <Compile Include="Lib\Shares.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
